Sanity check and set the framebuffer length if necessary.

Addresses PR 57126.